--- a/main.html
+++ b/main.html
@@ -10,6 +10,19 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<nav>
+    <ul>
+        <li><a href="https://www.youtube.com/watch?v=vqu4z34wENw">Home</a></li>
+        <li><a href="https://www.youtube.com/watch?v=vqu4z34wENw">About us</a></li>
+        <li><a href="https://www.youtube.com/watch?v=vqu4z34wENw">Contact us</a></li>
+    </ul>
+  </nav>
+  <div>
+    <h2>3 random images</h2>
+    <img src="https://picsum.photos/id/123/200/300" alt="">
+    <img src="https://picsum.photos/id/124/200/300" alt="">
+    <img src="https://picsum.photos/id/125/200/300" alt="">
+  </div>
 
 </body>
 
